Rename to multi-wrap-guide, fix scope selectors.

--- a/styles/multi-wrap-guide.less
+++ b/styles/multi-wrap-guide.less
@@ -1,7 +1,7 @@
 @import "syntax-variables";
 
 atom-text-editor::shadow {
-  .omni-ruler {
+  .multi-wrap-guide {
     height: 100%;
     width: 1px;
     z-index: 100;
